updated some todos

--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -19,7 +19,7 @@
 
     AGN are energetic objects at the centre of galaxies, powered by supermassive black holes. The extended, strongly-magnetised plasma they eject emits synchrotron radiation from accelerating relativistic electrons, which is what we see when we observe a radio galaxy. The radio luminosity of a radio galaxy can range from $10^{22}$--$10^{30}$ W~Hz$^{-1}$\citeneeded at 1.4~GHz, making them some of the most luminous objects in the universe \citeneeded. They are therefore visible throughout the universe, with the most distant AGN detected at a redshift of 7.5 \citep{banados_800-million-solar-mass_2018}. Depending on the orientation and type of AGN, as well as its interaction with its host galaxy, the radio emission may extend far beyond the galaxy itself---up to megaparsec scales---and this emission may have complex structure. Perhaps the most impressive local example is Centaurus A (Cen A), the prominent double-lobed cloud in the upper-right of \autoref{fig:gleam} extending over 8 degrees across the sky. \autoref{sec:agn} discusses AGN in more detail.
 
-    Most radio galaxies are compact and unresolved in any given radio survey due to the distance at which they can be detected and their orientation or type. This means that their structure does not always help distinguish AGN radio emission from star-forming radio emission. How can we tell these apart? Synchrotron emission has a considerably steeper spectral index than bremsstrahlung, but synchrotron emission dominates the bremsstrahlung in star-forming galaxies \citep{condon_radio_1992}. Truly star-forming galaxies can be distinguished from AGN host galaxies by using optical spectroscopy \citep[e.g.][]{mauch_radio_2007, groves_distinguishing_2007}, but radio emission is detectable at much greater distances than good quality optical spectra can be obtained at, making this solution impractical for many galaxies. Separating star-forming galaxies from AGN host galaxies at radio wavelengths remains an open problem in radio astronomy. \todo{are there any good ideas?}
+    Most radio galaxies are compact and unresolved in any given radio survey due to the distance at which they can be detected and their orientation or type. This means that their structure does not always help distinguish AGN radio emission from star-forming radio emission. How can we tell these apart? Synchrotron emission has a considerably steeper spectral index than bremsstrahlung, but synchrotron emission dominates the bremsstrahlung in star-forming galaxies \citep{condon_radio_1992}. Truly star-forming galaxies can be distinguished from AGN host galaxies by using optical spectroscopy \citep[e.g.][]{mauch_radio_2007, groves_distinguishing_2007}, but radio emission is detectable at much greater distances than good quality optical spectra can be obtained at, making this solution impractical for many galaxies. Separating star-forming galaxies from AGN host galaxies at radio wavelengths remains a difficult problem in radio astronomy.
 
     Polarised radio surveys can provide extra information. While radio emission due to star formation tends to not have detectable polarisation, AGN may be very strongly polarised. This makes polarisation an excellent indicator of whether a source is an AGN, though very incomplete: many AGN will also not have detectable polarisation, and the polarised intensity is usually less than ten per cent of the total radio intensity, meaning we detect a lot less polarised radio sources than we do radio sources in general.
 
@@ -49,15 +49,15 @@
         The spectral index for astronomical objects tends to range from -2 to 2\citeneeded.
 
     \subsection{Polarisation}
-    \label{sec:polarisation}\todo{Add some figures to this section to break it up a bit.}
+    \label{sec:polarisation}
 
-        Electromagnetic radiation consists of waves of self-propagating, orthogonal electric and magnetic fields. The orthogonality of these two waves allows us to characterise the radiation just by the electric field. As a transverse wave, the electric field travels at an angle \todo{An angle with respect to what? Can we have a diagram here?}. This angle and its behaviour is called the \defn{polarisation} of the wave.
+        Electromagnetic radiation consists of waves of self-propagating, orthogonal electric and magnetic fields. The orthogonality of these two waves allows us to characterise the radiation just by the electric field. As a transverse wave, the electric field travels at an angle in the plane perpendicular to the line-of-sight. This angle and its behaviour is called the \defn{polarisation} of the wave.
 
         The polarisation can be characterised by decomposing the electric field into orthogonal components $E_x$ and $E_y$, letting $\hat z$ denote the axis of propagation:
         \begin{equation}
             \vec E = (\hat x E_x \exp(i \varphi_x) + \hat y E_y \exp(i \varphi_y)) \exp(i (\vec k \cdot \hat z - \omega t)).
         \end{equation}
-        In an astronomical context, $\hat z$ is the line-of-sight from the source of the radiation to the observer. $\vec k$ is the \defn{wave vector} which points in the direction of travel and has magnitude $2\pi/\lambda$, and $\omega = 2\pi\nu$ is the \defn{angular frequency}. $\varphi_x$ and $\varphi_y$ are the phase offsets of each component. As this wave propagates along the line-of-sight toward an observer, the electric field oscillates in an ellipse across the $x$--$y$ plane. When the two components are in phase, this ellipse is degenerate and the radiation is called \defn{linearly polarised}. When the two components are perfectly out of phase, the ellipse is a circle, and the radiation is called \defn{circularly polarised}. Of course, any ellipse in between these extremes is also possible. For this reason, we decompose the polarisation into linearly polarised components and a circularly polarised component, called \defn{Stokes parameters}\todo{Cite the original Stokes parameters paper.}. These are \citep{condon_essential_2016}:
+        In an astronomical context, $\hat z$ is the line-of-sight from the source of the radiation to the observer. $\vec k$ is the \defn{wave vector} which points in the direction of travel and has magnitude $2\pi/\lambda$, and $\omega = 2\pi\nu$ is the \defn{angular frequency}. $\varphi_x$ and $\varphi_y$ are the phase offsets of each component. As this wave propagates along the line-of-sight toward an observer, the electric field oscillates in an ellipse across the $x$--$y$ plane. When the two components are in phase, this ellipse is degenerate and the radiation is called \defn{linearly polarised}. When the two components are perfectly out of phase, the ellipse is a circle, and the radiation is called \defn{circularly polarised}. Of course, any ellipse in between these extremes is also possible. For this reason, we decompose the polarisation into linearly polarised components and a circularly polarised component, called \defn{Stokes parameters} \citep{stokes_composition_1851,condon_essential_2016}. These are:
         \begin{align}
             \label{eq:stokes-i}
             I &= \frac{1}{R_0} \mathbb E_t[E_x^2 + E_y^2],\\
@@ -333,7 +333,7 @@
 
             The simplest automated method for cross-identification is simply to look for the closest optical or infrared galaxy to some radio emission, a strategy called \defn{positional matching} or \defn{nearest neighbours}. The distance to the nearest potential host galaxy is usually limited to some small value, so that distant spurious relations are excluded. This distance is usually about $5''$ for infrared and $1''$ for optical but may be much further. Some authors modify this approach to selecting the nearest \emph{bright} galaxy or some other constraints \citep[e.g.][]{kimball08}. This approach generally works quite well for compact objects but extended radio structures may overlap with unrelated galaxies on the sky, leading to spurious cross-identifications.
 
-            The rate of spurious identification with this approach can be estimated by a simple model, assuming that the true host galaxy is not visible (either too faint or not nearby). Assume that a small circular region of the sky with radius $a$ contains $K$ potential host galaxies. The probability that a randomly selected potential host galaxy is within $r\ \mathrm{rad}$ of a given point is $r^2 / a^2$, with $r < a$. The probability of no potential host galaxy falling within $r\ \mathrm{rad}$ of a given point is therefore $(1 - r^2 / a^2)^K$ and the probability of coincidental cross-identification is $1 - (1 - r^2 / a^2)^K$. The All\emph{WISE} survey contains 747~634~026 infrared sources, over $4\pi\ \mathrm{sr}$, so it has an average source density of approximately $6 \times 10^7\ \mathrm{sr}^{-1}$. With $r = 5''$, and $a = 1^\circ$ (corresponding to an area of $9.57 \times 10^{-4}\ \mathrm{sr}$ and thus 57~420 sources), we have a coincidental cross-identification rate of 10.5 per cent when the host galaxy is not visible.\todo{there's a few different ways to derive this... check this}
+            The rate of spurious identification with this approach can be estimated by a simple model, assuming that the true host galaxy is not visible (either too faint or not nearby). Assume that a small circular region of the sky with radius $a$ contains $K$ potential host galaxies. The probability that a randomly selected potential host galaxy is within $r\ \mathrm{rad}$ of a given point is $r^2 / a^2$, with $r < a$. The probability of no potential host galaxy falling within $r\ \mathrm{rad}$ of a given point is therefore $(1 - r^2 / a^2)^K$ and the probability of coincidental cross-identification is $1 - (1 - r^2 / a^2)^K$. The All\emph{WISE} survey contains 747~634~026 infrared sources, over $4\pi\ \mathrm{sr}$, so it has an average source density of approximately $6 \times 10^7\ \mathrm{sr}^{-1}$. With $r = 5''$, and $a = 1^\circ$ (corresponding to an area of $9.57 \times 10^{-4}\ \mathrm{sr}$ and thus 57~420 sources), we have a coincidental cross-identification rate of 10.5 per cent when the host galaxy is not visible.
 
             % Assume that a circular region of the sky with solid angle $a\ \mathrm{sr}$ contains $K$ potential host galaxies distributed uniformly. The probability that a randomly selected potential host galaxy is within $r\ \mathrm{rad}$ of any given point, such as the location of a radio object, is $2\pi(1 - \cos r)/a$, which is the ratio of the area of the respective spherical caps. Therefore the probability of this potential host galaxy \emph{not} being within radius $r$ is $1 - 2\pi(1 - \cos r)/a$, and the probability of \emph{any} of the $K$ potential host galaxies not being within $r$ is $(1 - 2\pi(1 - \cos r)/a)^K$. Assuming a constant density of galaxies $\rho\ \mathrm{sr}^{-1}$, $K = \rho a$, so $(1 - 2\pi(1 - \cos r)/a)^{\rho a}$. The maximum value of $a$ is $4\pi$, and in this limit we have $\cos^2(r/2)^{4\pi\rho}$. If $r$ is very small, then we can approximate $\cos^2 (r / 2) \approx 1 - r^2 / 8$ and we have $(1 - r^2 / 8)^{4 \pi \rho}$.
 
