--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -4879,3 +4879,98 @@ Publisher: Nature Publishing Group},
 	year = {1851},
 	pages = {399}
 }
+
+@misc{tucker_stargazing_2017,
+	title = {Stargazing citizens join search for {Planet} {Nine}},
+	url = {https://www.abc.net.au/news/2017-04-04/stargazing-live-citizens-join-search-for-planet-nine/8414832},
+	abstract = {To help find Planet Nine, you just need a computer and a little astronomy knowledge. Already, 120,000 images have been processed by citizen scientists in just three days, writes Brad Tucker.},
+	language = {en-AU},
+	urldate = {2021-01-16},
+	journal = {ABC},
+	author = {Tucker, Brad},
+	month = apr,
+	year = {2017},
+	file = {Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\8LWE483V\\8414832.html:text/html}
+}
+
+@misc{miller_stargazing_2017,
+	title = {Stargazing {Live} viewers find four-planet solar system},
+	url = {https://www.abc.net.au/news/2017-04-06/stargazing-live-four-planets-discovered-in-new-solar-system/8423142},
+	abstract = {Australian volunteer citizen scientists find four previously unknown planets orbiting a nearby star thanks to a crowd-sourcing project aired on the ABC's Stargazing Live.},
+	language = {en-AU},
+	urldate = {2021-01-16},
+	journal = {ABC},
+	author = {Miller, Daniel},
+	month = apr,
+	year = {2017},
+	file = {Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\GLF4NH52\\8423142.html:text/html}
+}
+
+@article{zhang_learning_2016,
+	title = {Learning from crowdsourced labeled data: a survey},
+	volume = {46},
+	issn = {1573-7462},
+	shorttitle = {Learning from crowdsourced labeled data},
+	url = {https://doi.org/10.1007/s10462-016-9491-9},
+	doi = {10.1007/s10462-016-9491-9},
+	abstract = {With the rapid growing of crowdsourcing systems, quite a few applications based on a supervised learning paradigm can easily obtain massive labeled data at a relatively low cost. However, due to the variable uncertainty of crowdsourced labelers, learning procedures face great challenges. Thus, improving the qualities of labels and learning models plays a key role in learning from the crowdsourced labeled data. In this survey, we first introduce the basic concepts of the qualities of labels and learning models. Then, by reviewing recently proposed models and algorithms on ground truth inference and learning models, we analyze connections and distinctions among these techniques as well as clarify the level of the progress of related researches. In order to facilitate the studies in this field, we also introduce open accessible real-world data sets collected from crowdsourcing systems and open source libraries and tools. Finally, some potential issues for future studies are discussed.},
+	language = {en},
+	number = {4},
+	urldate = {2021-01-16},
+	journal = {Artificial Intelligence Review},
+	author = {Zhang, Jing and Wu, Xindong and Sheng, Victor S.},
+	month = dec,
+	year = {2016},
+	pages = {543--576},
+	file = {Springer Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\T8C8AD73\\Zhang et al. - 2016 - Learning from crowdsourced labeled data a survey.pdf:application/pdf}
+}
+
+@article{gilyazev_active_2018,
+	title = {Active {Learning} and {Crowdsourcing}: {A} {Survey} of {Optimization} {Methods} for {Data} {Labeling}},
+	volume = {44},
+	issn = {1608-3261},
+	shorttitle = {Active {Learning} and {Crowdsourcing}},
+	url = {https://doi.org/10.1134/S0361768818060142},
+	doi = {10.1134/S0361768818060142},
+	abstract = {High-quality annotated collections are a key element in constructing systems that use machine learning. In most cases, these collections are created through manual labeling, which is expensive and tedious for annotators. To optimize data labeling, a number of methods using active learning and crowdsourcing were proposed. This paper provides a survey of currently available approaches, discusses their combined use, and describes existing software systems designed to facilitate the data labeling process.},
+	language = {en},
+	number = {6},
+	urldate = {2021-01-16},
+	journal = {Programming and Computer Software},
+	author = {Gilyazev, R. A. and Turdakov, D. Yu.},
+	month = nov,
+	year = {2018},
+	pages = {476--491},
+	file = {Springer Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\3UNFRUS6\\Gilyazev and Turdakov - 2018 - Active Learning and Crowdsourcing A Survey of Opt.pdf:application/pdf}
+}
+
+@misc{sieland_snapshot_2015,
+	title = {Snapshot {Serengeti}: {An} {Unexpected} {Discovery}},
+	shorttitle = {Snapshot {Serengeti}},
+	url = {https://www.mico-project.eu/snapshot-serengeti-an-unexpected-discovery/},
+	language = {en-US},
+	urldate = {2021-01-16},
+	journal = {Mico Project},
+	author = {Sieland, Marcel},
+	month = may,
+	year = {2015},
+	file = {Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\KYISFSJP\\snapshot-serengeti-an-unexpected-discovery.html:text/html}
+}
+
+@article{menon_learning_nodate,
+	title = {Learning from {Corrupted} {Binary} {Labels} via {Class}-{Probability} {Estimation} ({Full} {Version})},
+	abstract = {Many supervised learning problems involve learning from samples whose labels are corrupted in some way. For example, each label may be ﬂipped with some constant probability (learning with label noise), or one may have a pool of unlabelled samples in lieu of negative samples (learning from positive and unlabelled data). This paper uses class-probability estimation to study these and other corruption processes belonging to the mutually contaminated distributions framework (Scott et al., 2013), with three conclusions. First, one can optimise balanced error and AUC without knowledge of the corruption parameters. Second, given estimates of the corruption parameters, one can minimise a range of classiﬁcation risks. Third, one can estimate corruption parameters via a class-probability estimator (e.g. kernel logistic regression) trained solely on corrupted data. Experiments on label noise tasks corroborate our analysis.},
+	language = {en},
+	author = {Menon, Aditya Krishna},
+	pages = {52},
+	file = {Menon - Learning from Corrupted Binary Labels via Class-Pr.pdf:C\:\\Users\\matthew\\Zotero\\storage\\5VFG5KTC\\Menon - Learning from Corrupted Binary Labels via Class-Pr.pdf:application/pdf}
+}
+
+@article{menon_learning_nodate-1,
+	title = {Learning from {Corrupted} {Binary} {Labels} via {Class}-{Probability} {Estimation} ({Full} {Version})},
+	abstract = {Many supervised learning problems involve learning from samples whose labels are corrupted in some way. For example, each label may be ﬂipped with some constant probability (learning with label noise), or one may have a pool of unlabelled samples in lieu of negative samples (learning from positive and unlabelled data). This paper uses class-probability estimation to study these and other corruption processes belonging to the mutually contaminated distributions framework (Scott et al., 2013), with three conclusions. First, one can optimise balanced error and AUC without knowledge of the corruption parameters. Second, given estimates of the corruption parameters, one can minimise a range of classiﬁcation risks. Third, one can estimate corruption parameters via a class-probability estimator (e.g. kernel logistic regression) trained solely on corrupted data. Experiments on label noise tasks corroborate our analysis.},
+	language = {en},
+	author = {Menon, Aditya Krishna},
+	pages = {52},
+	file = {Menon - Learning from Corrupted Binary Labels via Class-Pr.pdf:C\:\\Users\\matthew\\Zotero\\storage\\ZAJEUQWM\\Menon - Learning from Corrupted Binary Labels via Class-Pr.pdf:application/pdf}
+}
