--- a/thesis/xid.tex
+++ b/thesis/xid.tex
@@ -1129,7 +1129,7 @@ In this chapter, we consider the problem of determining the host galaxies of rad
 
 \appendix
 
-\section{Classification models}\label{app:models}
+\section{Classification models}\label{sec:atlas-xid-models}
 
   We use three different models for binary classification: logistic
   regression, convolutional neural networks, and random forests.
@@ -1199,7 +1199,7 @@ In this chapter, we consider the problem of determining the host galaxies of rad
     implementation of random forests with 10 trees, the information entropy
     split criterion, a minimum leaf size of 45 and balanced classes}.
 
-\section{Accuracy tables}\label{app:accuracies}
+\section{Accuracy tables}\label{sec:atlas-xid-accuracies}
   
   This section contains tables of accuracy for our method applied to CDFS and
   ELAIS-S1. In \autoref{tab:cdfs-ba} and \autoref{tab:elais-ba} we list the
@@ -1318,7 +1318,7 @@ In this chapter, we consider the problem of determining the host galaxies of rad
     \end{tabular}
   \end{table*}
 
-\section{SWIRE object scores}\label{app:scores}
+\section{SWIRE object scores}\label{sec:atlas-xid-scores}
   
   This section contains scores predicted by our binary classifiers for each
   SWIRE object within $1'$ of a radio component in CDFS and ELAIS-S1. Scores
@@ -1340,7 +1340,7 @@ In this chapter, we consider the problem of determining the host galaxies of rad
   \end{itemize}
 
   \begin{table*}
-    \caption[Scores output by our trained classifiers for SWIRE~CDFS candidate host galaxies.]{Scores output by our trained classifiers for SWIRE~CDFS candidate host galaxies. Columns are defined in \autoref{app:scores}. Full table electronic.}
+    \caption[Scores output by our trained classifiers for SWIRE~CDFS candidate host galaxies.]{Scores output by our trained classifiers for SWIRE~CDFS candidate host galaxies. Columns are defined in \autoref{app:xid-scores}. Full table electronic.}
     \label{tab:cdfs-scores}
     \begin{tabular}{ccccccccccccccccccccccc}
       \hline
@@ -1361,7 +1361,7 @@ J032603.75-284014.1 & 51.5156 & -28.6706 & no & no & 0.0547 & 0.3408 & 0.5388 & 
   \end{table*}
 
   \begin{table*}
-    \caption[Scores output by our trained classifiers for SWIRE~ELAIS-S1 candidate host galaxies.]{Scores output by our trained classifiers for SWIRE~ELAIS-S1 candidate host galaxies. Columns are defined in \autoref{app:scores}. Full table electronic.}
+    \caption[Scores output by our trained classifiers for SWIRE~ELAIS-S1 candidate host galaxies.]{Scores output by our trained classifiers for SWIRE~ELAIS-S1 candidate host galaxies. Columns are defined in \autoref{app:xid-scores}. Full table electronic.}
     \label{tab:elais-scores}
     \begin{tabular}{ccccccccccccccccccccccc}
       \hline
@@ -1381,7 +1381,7 @@ J002928.80-440306.8 & 7.3700 & -44.0519 & no & no & 0.0003 & 0.8405 & 0.5668 & 0
     \end{tabular}
   \end{table*}
 
-\section{ATLAS component cross-identifications}\label{app:xids}
+\section{ATLAS component cross-identifications}\label{sec:atlas-xid-xids}
   
   This section contains cross-identifications predicted by our method for each
   ATLAS radio component in CDFS and ELAIS-S1. Cross-identifications for
@@ -1416,7 +1416,7 @@ J002928.80-440306.8 & 7.3700 & -44.0519 & no & no & 0.0003 & 0.8405 & 0.5668 & 0
   \end{itemize}
 
   \begin{table*}
-    \caption[Cross-identifications for ATLAS~CDFS components.]{Cross-identifications for ATLAS~CDFS components. Columns are defined in \autoref{app:xids}. Full table electronic.}
+    \caption[Cross-identifications for ATLAS~CDFS components.]{Cross-identifications for ATLAS~CDFS components. Columns are defined in \autoref{app:xid-xids}. Full table electronic.}
     \label{tab:cdfs-xids}
     \begin{tabular}{ccccccccccccccccccccccccccccccccccccccccccccccccc}
       \hline
@@ -1437,7 +1437,7 @@ J032634.59-282022.8C & 51.6441 & -28.3397 & CI0757 & ARG0003rj2 & J032634.58-282
   \end{table*}
 
   \begin{table*}
-    \caption[Cross-identifications for ATLAS~ELAIS-S1 components.]{Cross-identifications for ATLAS~ELAIS-S1 components. Columns are defined in \autoref{app:xids}. Full table electronic.}
+    \caption[Cross-identifications for ATLAS~ELAIS-S1 components.]{Cross-identifications for ATLAS~ELAIS-S1 components. Columns are defined in \autoref{app:xid-xids}. Full table electronic.}
     \label{tab:elais-xids}
     \begin{tabular}{ccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
       \hline
@@ -1457,7 +1457,7 @@ J002951.19-440556.6 & 7.4633 & -44.0991 & C0342 &  & J002951.26-440556.4 & 7.463
     \end{tabular}
   \end{table*}
 
-\section{Cross-identification figures}\label{app:examples}
+\section{Cross-identification figures}\label{sec:atlas-xid-examples}
 
     This section contains figures of cross-identifications of each ATLAS radio component in CDFS and ELAIS-S1.
 
